--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.12.2",
+    "mongoose": "^5.12.3",
     "nodemailer": "^6.5.0",
     "qs-to-mongo": "^2.0.0",
     "reflect-metadata": "^0.1.13",
@@ -29,6 +29,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.20",
     "@types/mongoose": "^5.10.4",
+    "@types/node": "^14.14.37",
     "@types/nodemailer": "^6.4.0",
     "@types/supertest": "^2.0.10",
     "handlebars": "^4.7.7",
