--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express-async-errors": "^3.1.1",
     "mongoose": "^5.12.3",
     "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.7",
     "qs-to-mongo": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "ts-node": "^9.1.1",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
@@ -38,6 +40,17 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
-  }
+    "typescript": "^4.2.3"
+  },
+  "description": "Have you ever wondered about the quality of the fuel before fill up? Know how other users rate the experience, or write about yours.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IanIshioka/santo-posto-teste.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/IanIshioka/santo-posto-teste/issues"
+  },
+  "homepage": "https://github.com/IanIshioka/santo-posto-teste#readme"
 }
