--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "test": "set NODE_ENV=test&&jest  -i",
     "posttest": "rimraf ./src/database/database.test.sqlite",
-    "start": "node server.ts"
+    "start": "ts-node src/server.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
